--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,6 +1,14 @@
+html {
+  background-color: var(--grey-0);
+  color: var(--grey-9);
+}
+
 body {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell,
+    Noto Sans, sans-serif, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   line-height: 1.5;
+  font-size: 17px;
 }
 
 .sr-only {
