--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn-primary {
+  @apply block transition py-2 px-4 rounded-md border-2 border-transparent text-white bg-blue-600 ease-in-out duration-300;
+}
+.btn-primary:hover {
+  @apply bg-blue-800 underline;
+}
